--- a/docs/themes/smac/static/css/custom.css
+++ b/docs/themes/smac/static/css/custom.css
@@ -5,7 +5,7 @@
 }
 
 .bd-search .icon {
-    left: 10;
+    left: 10px;
 }
 
 #navbar-collapsible {
@@ -25,7 +25,8 @@
 }
 
 @media (max-width:959.98px){.navbar-expand-lg>.container,.navbar-expand-lg>.container-fluid,.navbar-expand-lg>.container-lg,.navbar-expand-lg>.container-md,.navbar-expand-lg>.container-sm,.navbar-expand-lg>.container-xl{
-    padding-right:15px;padding-left:15px;
+    padding-right: 15px;
+    padding-left: 15px;
 }}
 
 
@@ -67,17 +68,21 @@ p.sphx-glr-signature, p.sphx-glr-timing, .sphx-glr-download, .sphx-glr-download-
 }
 
 .sphx-glr-thumbcontainer .figure p.caption:hover {
-    box-shadow: 0 !important;
-    -webkit-box-shadow: 0 !important;
+    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+}
+
+.sphx-glr-thumbcontainer img {
+    display: none !important;
 }
 
 .sphx-glr-thumbcontainer .figure img {
-    display: none;
+    display: none !important;
 }
 
 .sphx-glr-thumbcontainer a.internal {
     position: relative !important;
-    padding: 30 15px !important;
+    padding: 30px 15px !important;
     background-color: rgb(128, 128, 128) !important;
     color: white !important;
     border: 0 !important;
@@ -89,8 +94,8 @@ p.sphx-glr-signature, p.sphx-glr-timing, .sphx-glr-download, .sphx-glr-download-
     background-color: rgb(60, 60, 60) !important;
     border: 0 !important;
 
-    box-shadow: 0 !important;
-    -webkit-box-shadow: 0 !important;
+    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
 
     text-decoration: none;
 }
